@@ -21,6 +21,7 @@ require Exporter;
 
 use vars qw/$VERSION @EXPORT_OK @ISA /;
 
+use DateTime;
 use Data::Dumper;
 use Storable;
 use Digest::MD5 'md5_hex';
@@ -36,9 +37,10 @@ use eSTAR::Error qw /:try/;
 @ISA = qw/Exporter/;
 @EXPORT_OK = 
       qw/ make_cookie make_id freeze thaw reheat melt query_simbad 
-          fudge_message fudge_user fudge_project /;
+          fudge_message fudge_user fudge_project
+	  time_at_LT time_at_FTN time_at_FTS /;
 
-'$Revision: 1.20 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+'$Revision: 1.21 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 # This is the code that is used to generate cookies based on the user
 # name and password. It is NOT cryptographically sound, it is just a
@@ -463,11 +465,33 @@ sub fudge_project {
    return $new_rtml;
 }
 
+
+sub time_at_LT {
+  my $dt = DateTime->now();
+  $dt->set_time_zone( 'Atlantic/Canary' );
+  my $iso = $dt->ymd('-') . "T" . $dt->hms(':') ." (". $dt->time_zone_short_name() .")"; 
+  return $iso;
+}
+
+sub time_at_FTN {
+  my $dt = DateTime->now();
+  $dt->set_time_zone( 'Pacific/Honolulu' );
+  my $iso = $dt->ymd('-') . "T" . $dt->hms(':') ." (". $dt->time_zone_short_name() .")";	
+  return $iso;
+}
+
+sub time_at_FTS {
+  my $dt = DateTime->now();
+  $dt->set_time_zone( 'Australia/Sydney' );
+  my $iso = $dt->ymd('-') . "T" . $dt->hms(':') ." (". $dt->time_zone_short_name() . ")";
+  return $iso;
+}
+
 =back
 
 =head1 REVISION
 
-$Id: Util.pm,v 1.20 2007/02/13 18:19:08 aa Exp $
+$Id: Util.pm,v 1.21 2008/03/17 17:10:57 aa Exp $
 
 =head1 AUTHORS
 
